@@ -22,6 +22,6 @@
     <orderEntry type="library" scope="PROVIDED" name="Maven: org.projectlombok:lombok:1.16.18" level="project" />
     <orderEntry type="library" name="Maven: org.slf4j:slf4j-simple:1.7.13" level="project" />
     <orderEntry type="library" name="Maven: org.slf4j:slf4j-api:1.7.13" level="project" />
-    <orderEntry type="library" name="Maven: me.deprilula28:DepsJDAFramework:1.1.15" level="project" />
+    <orderEntry type="library" name="Maven: me.deprilula28:DepsJDAFramework:1.1.16" level="project" />
   </component>
 </module>
