@@ -50,6 +50,12 @@ public class Language {
             else return transl(Constants.DEFAULT_LANGUAGE, key, format);
         }
 
-        return String.format(keys.get(key), format);
+        try {
+            return String.format(keys.get(key), format);
+        } catch (MissingFormatArgumentException e) {
+            return "This language seems to be glitched.\nPlease report this error here: https://discord.gg/gJKQPkN\n" +
+                    "`" + language + ", Key " + key + ", formatted " + format.length + "`\n" +
+                    "If this is an important function, you can always go back to english until it's fixed \uD83D\uDE09";
+        }
     }
 }
